@@ -59,7 +59,7 @@
     </sequential>
   </target>
 
-  <target name="dist-maven" depends="dist-maven-src-java"/>
+  <target name="-dist-maven" depends="-dist-maven-src-java"/>
 
   <macrodef name="createLevAutomaton">
   	<attribute name="n"/>
