@@ -334,18 +334,6 @@
     </sequential>
   </target>
 
-  <target name="m2-deploy-solr-parent-pom" depends="filter-pom-templates"
-          unless="deployed.solr.parent.pom.uptodate">
-    <m2-deploy pom.xml="${filtered.pom.templates.dir}/solr/pom.xml"/>    <!-- Solr parent POM -->
-    <property name="deployed.solr.parent.pom.uptodate" value="true"/>
-  </target>
-
-  <target name="dist-maven"
-          depends="filter-pom-templates, install-maven-tasks, m2-deploy-solr-parent-pom, -unpack-solr-tgz, dist-maven-common"/>
-
-  <target name="dist-maven-src-java"
-          depends="filter-pom-templates, install-maven-tasks, m2-deploy-solr-parent-pom, -unpack-solr-tgz, dist-maven-common-src-java"/>
-
   <target name="-validate-maven-dependencies" depends="-validate-maven-dependencies.init">
     <m2-validate-dependencies pom.xml="${maven.pom.xml}" licenseDirectory="${license.dir}">
       <additional-filters>
