@@ -64,7 +64,7 @@
   </target>
 
   <!-- nothing to do -->
-  <target name="dist-maven"/>
+  <target name="-dist-maven"/>
 
   <!-- nothing to do -->
   <target name="-validate-maven-dependencies"/>
